# resolc-compiler-tests

./: Cargo.toml  schema.json
crates/tool/: Cargo.toml
crates/tool/src/: main.rs
crates/tool/src/commands/: mod.rs  replace_caller.rs  translate_semantic_tests.rs
crates/tool/src/common/: files_with_extension_iterator.rs  mod.rs  private_key_allocator.rs  utils.rs
crates/tool/src/semantic_tests_parser/: function_section_parser.rs  mod.rs  section.rs  semantic_test.rs  test_configuration.rs
fixtures/llvm/eravm/: clz.ll  default.ll
fixtures/llvm/eravm/intrinsics/: bswap.ll  ctlz.ll  ctpop.ll  cttz.ll  sadd.sat.ll  sadd.with.overflow.ll  ssub.sat.ll  ssub.with.overflow.ll  uadd.sat.ll  umul.with.overflow.ll  usub.sat.ll
fixtures/llvm/eravm/load/: load.ll  small_load_known_crossing.ll  small_load_known_lb.ll  small_load_known_mid.ll  small_load_known_rb.ll  small_load_unknown.ll
fixtures/llvm/eravm/memcpy/: memcpy_as1_as3_36.ll  memcpy_as1_as3_36n.ll  memcpy_as1_as3_48.ll  memcpy_as1_as3_48n.ll  memcpy_as1_as3_64.ll  memcpy_as1_as3_64n.ll
fixtures/llvm/eravm/memset/: memset_0.ll  memset_0n.ll  memset_20.ll  memset_20n.ll  memset_32.ll  memset_32n.ll  memset_41.ll  memset_41n.ll  memset_64.ll  memset_64n.ll
fixtures/llvm/eravm/signed-operations/: sdiv.i256.ll  sdiv.i8.ll  sdivrem.i256.ll  sdivrem.i8.ll  srem.i256.ll  srem.i8.ll  udivrem.i256.ll  udivrem.i8.ll
fixtures/llvm/eravm/stack/: array_allocation_fix_index.ll  array_allocation_variable_index.ll
fixtures/llvm/eravm/store/: small_store_crossing.ll  small_store_lb.ll  store.ll  (+3 more)
fixtures/solidity/simple/: aave.sol  call_with_dirty_address.sol  default.sol  recursion_keccak.sol  stack_overflow.sol  ternary_overflow.sol
fixtures/vyper/simple/: default-0.3.vy  default.vy  evaluation_order-0.3.vy  evaluation_order.vy
fixtures/yul/: address_space_distinction.yul  default.yul  immutable_high_indexes.yul  multiple_return_values.yul  optimizer_bug.yul  self_call_nested.yul  self_call_stack_overflow.yul
fixtures/yul/examples/: example_1.yul  example_2.yul  example_3.yul  example_4.yul  example_5.yul
fixtures/yul/instructions/: byte.yul  greater_equals.yul  greater_than.yul  lesser_equals.yul  lesser_than.yul  load.yul  msize.yul  mstore8.yul  revert.yul  shift_arithmetic_right.yul  sign_extend.yul  signed_division.yul  store.yul
fixtures/yul/near_call_abi/: evaluation_order.yul  simple_tuple.yul
fixtures/yul/precompiles/: ecadd.yul  ecadd_source.yul  ecmul.yul  ecmul_source.yul  modexp_source.yul  p256verify_source.yul
fixtures/yul/semantic/: expressions.yul  for.yul  function_definitions.yul  if.yul  literals.yul  statements.yul  switch.yul  variables.yul
fixtures/yul/simulations/: active_ptr_data_copy.yul  active_ptr_data_load.yul  active_ptr_data_size.yul  call_flags.yul  code_source.yul  const_array.yul  decommit.yul  event_initialize.yul  event_write.yul  extra_abi_data.yul  increment_tx_counter.yul  load_calldata_ptr_into_active.yul  load_return_data_ptr_into_active.yul  meta.yul  mimic_call.yul  mimic_call_by_ref.yul  multiplication_high.yul  precompile.yul  ptr_add_into_active.yul  ptr_calldata.yul  ptr_pack_into_active.yul  ptr_return_data.yul  ptr_shrink_into_active.yul  raw_far_call.yul  raw_far_call_by_ref.yul  set_context_u128.yul  set_pubdata_price.yul  system_call.yul  system_call_by_ref.yul  system_mimic_call.yul  system_mimic_call_by_ref.yul  to_l1.yul
(+5119 files in other folders)
