[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT/Apache-2.0"
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.0.23", default-features = false, features = [
    "signers",
    "signer-local",
] }
anyhow = { version = "1.0.98" }
clap = { version = "4.5.42", features = ["derive", "wrap_help"] }
indoc = { version = "2.0.6", default-features = false }
regex = { version = "1.11.1" }
serde_json = { version = "1.0.141", features = ["preserve_order"] }

revive-dt-common = { git = "https://github.com/paritytech/revive-differential-tests", rev = "c47b66de3b93a9768fb61ea3a8d4eb5fd5d9de08" }
revive-dt-format = { git = "https://github.com/paritytech/revive-differential-tests", rev = "c47b66de3b93a9768fb61ea3a8d4eb5fd5d9de08" }
