[package]
name = "helper"
description = "A helper tool for the ML metadata files"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
