[package]
name = "helper"
description = "A helper tool for the ML metadata files"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
alloy = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }

revive-dt-common = { workspace = true }
revive-dt-format = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
